# argos3-airtight

./: .gitignore  CMakeLists.txt  parse_flock_trace.py  parse_trace2.py  parse_trace3.py  parse_trace4.py  runSimulations.py
controllers/: CMakeLists.txt
controllers/circle/: CMakeLists.txt  controller.cpp  controller.h
controllers/dfrontier/: CMakeLists.txt  controller.cpp  controller.h  coverage_matrix.cpp  coverage_matrix.h
controllers/flocking/: CMakeLists.txt  controller.cpp  controller.h
experiments/: SPcircle_config-airtight-10.argos  SPcircle_config-airtight-2.argos  SPcircle_config-airtight-6.argos  SPcircle_config-airtight-8.argos  airtight_analysis.py  circle_config-airtight-10.argos  circle_config-airtight-2.argos  circle_config-airtight-3.argos  circle_config-airtight-7.argos  circle_config-airtight-8.argos  circle_config-airtight-9.argos  circle_config-broadcast-2.argos  circle_config-broadcast-6.argos  circle_config-broadcast-9.argos  circle_config-p2p-1.argos  circle_config-p2p-10.argos  circle_config-p2p-2.argos  circle_config-p2p-3.argos  circle_config-p2p-4.argos  circle_config-p2p-5.argos  circle_config-p2p-6.argos  circle_config-p2p-7.argos  circle_config-p2p-8.argos  circle_config-p2p-9.argos  gen_circle_config2.py  gen_configs.sh  gen_flock_config.py  gen_frontier_config.py  gen_frontier_configs.sh
experiments/circle/: SPcircle_config-airtight-1.argos  SPcircle_config-airtight-3.argos  SPcircle_config-airtight-4.argos  SPcircle_config-airtight-5.argos  SPcircle_config-airtight-7.argos  SPcircle_config-airtight-9.argos  circle_config-airtight-1.argos  circle_config-airtight-4.argos  circle_config-airtight-5.argos  circle_config-airtight-6.argos  circle_config-broadcast-1.argos  circle_config-broadcast-10.argos  circle_config-broadcast-3.argos  circle_config-broadcast-4.argos  circle_config-broadcast-5.argos  circle_config-broadcast-7.argos  circle_config-broadcast-8.argos  circle_config-p2p-1.argos  circle_config-p2p-10.argos  circle_config-p2p-2.argos  circle_config-p2p-3.argos  circle_config-p2p-4.argos  circle_config-p2p-5.argos  circle_config-p2p-6.argos  circle_config-p2p-7.argos  circle_config-p2p-8.argos  circle_config-p2p-9.argos
experiments/flocking/: airtight-0.2-1.argos  airtight-0.2-10.argos  airtight-0.2-2.argos  airtight-0.2-3.argos  airtight-0.2-4.argos  airtight-0.2-5.argos  airtight-0.2-6.argos  airtight-0.2-7.argos  airtight-0.2-8.argos  airtight-0.2-9.argos  airtight-0.4-1.argos  airtight-0.4-10.argos  airtight-0.4-2.argos  airtight-0.4-3.argos  airtight-0.4-4.argos  airtight-0.4-5.argos  airtight-0.4-6.argos  airtight-0.4-7.argos  airtight-0.4-8.argos  airtight-0.4-9.argos  airtight-0.6-1.argos  airtight-0.6-10.argos  airtight-0.6-2.argos  airtight-0.6-3.argos  airtight-0.6-4.argos  airtight-0.6-5.argos  airtight-0.6-6.argos  airtight-0.6-7.argos  airtight-0.6-8.argos  airtight-0.6-9.argos  airtight-0.8-1.argos  airtight-0.8-10.argos  airtight-0.8-2.argos  airtight-0.8-3.argos  airtight-0.8-4.argos  airtight-0.8-5.argos  airtight-0.8-6.argos  airtight-0.8-7.argos  airtight-0.8-8.argos  airtight-0.8-9.argos  (+110 more)
loop_functions/: CMakeLists.txt  circle_loop_functions.cpp  circle_loop_functions.h  circle_opengl_functions.cpp  circle_opengl_functions.h  dfrontier_loop_functions.cpp  dfrontier_loop_functions.h  dfrontier_opengl_functions.cpp  dfrontier_opengl_functions.h  flocking_loop_functions.cpp  flocking_loop_functions.h
simulator/: BigLEDActuator.cpp  BigLEDActuator.h  CMakeLists.txt
simulator/slot-radio/: radio_frame.h  slot_radio_medium.cpp  slot_radio_medium.h
simulator/slot-radio/airtight/: AirTightActuator.cpp  AirTightActuator.h  AirTightAnalysis.cpp  AirTightAnalysis.h  AirTightBuffer.h  AirTightFrame.h  AirTightSensor.cpp  AirTightSensor.h
simulator/slot-radio/control_interface/: ci_slot_radio_actuator.h  ci_slot_radio_sensor.h
simulator/slot-radio/generic/: slot_radio_actuator.h  slot_radio_frame.h  slot_radio_medium.cpp  slot_radio_medium.h  slot_radio_sensor.h
simulator/slot-radio/naive-broadcast/: NaiveBroadcastActuator.cpp  NaiveBroadcastActuator.h  NaiveBroadcastFrame.h  NaiveBroadcastSensor.cpp  NaiveBroadcastSensor.h
simulator/slot-radio/naive-p2p/: NaiveP2PActuator.cpp  NaiveP2PActuator.h  NaiveP2PFrame.h  NaiveP2PSensor.cpp  NaiveP2PSensor.h
simulator/slot-radio/protocol1/: Protocol1Actuator.cpp  Protocol1Actuator.h  Protocol1Buffer.h  Protocol1Frame.h  Protocol1Sensor.cpp  Protocol1Sensor.h
